package.json post release processing and package paths in templates

--- a/plop-templates/Component.jsx.hbs
+++ b/plop-templates/Component.jsx.hbs
@@ -3,7 +3,7 @@
 // Extends PiSdkComponent for Pi Network flows and UI.
 // ============================================================================
 import React from 'react';
-import PiSdkComponent from "./PiSdkComponent";
+Pimport PiSdkComponent from "pi-sdk-react/PiSdkComponent";
 
 export default class {{name}} extends PiSdkComponent {
   constructor(props) {
