--- a/plop-templates/PiSdkComponentWithBuy.jsx.hbs
+++ b/plop-templates/PiSdkComponentWithBuy.jsx.hbs
@@ -1,9 +1,9 @@
 // ============================================================================
-// Example {{name}} React Component - Modeled after PiButton
+// Example {{name}} React Component
 // Extends PiSdkComponent for Pi Network flows and UI.
 // ============================================================================
 import React from 'react';
-import PiSdkComponent from "./PiSdkComponent";
+import PiSdkComponent from "pi-sdk-react/PiSdkComponent";
 
 export default class {{name}} extends PiSdkComponent {
   constructor(props) {
